--- a/_posts/angular/2017-11-14-clase-1-feed.md
+++ b/_posts/angular/2017-11-14-clase-1-feed.md
@@ -9,6 +9,7 @@ cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.co
 video: true
 remember: true
 repo: https://github.com/ion-book/firstAngular
+editname: "angular/2017-11-14-clase-1-feed.md"
 versions:
   - title: 'Angular CLI'
     number: '1.5.0'
@@ -55,7 +56,7 @@ npm install -g @angular/cli
 Ok, ahora necesitamos escribir este comando:
 
 ```
-new new firstAngular
+ng new firstAngular
 ```
 
 Ok, ahora si todo sale bien, tu puedes ver en la ubicacion de tu directorio una nueva carpeta llamada *"firstAngular"* y en tu terminal CLI. Algo como esto:
