:tada: add --cordova

--- a/_posts/ionic2/2017-10-20-sms-ionic.md
+++ b/_posts/ionic2/2017-10-20-sms-ionic.md
@@ -34,7 +34,7 @@ Para esto vamos a trabajar en este caso con los plugins “cordova-plugin-androi
 Primero que todo creamos nuestro proyecto ionic, en este caso lo llamare “receiver_sms”
 
 ````
-$ionic start receiver_sms blank
+$ionic start receiver_sms blank --cordova
 ````
 
 Una vez creado el proyecto ionic, ingresamos a este y procedemos a agregar la plataforma en la que vamos a trabajar, en este caso Android:
