--- a/_drafts/2016-08-09-fork-join.md
+++ b/_drafts/2016-08-09-fork-join.md
@@ -6,24 +6,35 @@ tags: [angular2, tips]
 categories: tips
 author: nicobytes
 repo: https://github.com/ion-book/demo114
+laucher: 'https://ion-book.github.io/demo114/'
 remember: true
 cover: "/images/posts/tips/2016-08-09-fork-join/cover.jpg"
 versions:
   - title: 'ionic'
-    number: '3.3.0'
+    number: '3.9.2'
+  - title: 'ionic-native'
+    number: '4.4.2'
   - title: 'ionic-app-scripts'
-    number: '1.3.7'
+    number: '3.1.2'
   - title: 'cordova-cli'
-    number: '7.0.0'
+    number: '7.0.1'
   - title: 'ionic-cli'
-    number: '3.4.0'
+    number: '3.19.0'
 ---
 
 > Los [**Observables**]({{site.urlblog}}/ionic2/observables-angular){:target="_blank"} son pieza clave en Ionic y Angular, en artículos pasados vimos como consumir una [**REST API**]({{site.urlblog}}//ionic2/rest-api-with-ionic){:target="_blank"}, ahora vamos a ver como hacer peticiones en paralelo usando Observables con **ForkJoin**.
 
 <amp-img width="1024" height="512" layout="responsive" src="/images/posts/tips/2016-08-09-fork-join/cover.jpg"></amp-img>
 
-{% include general/net-promoter-score.html %} 
+{% include general/net-promoter-score.html %}
+
+# Actualización (01/12/2017)
+<hr/>
+
+Hemos actualizado este demo con el último release **Ionic 3.9** y **Angular 5**.
+
+<a href="https://ion-book.github.io/demo114/" target="_blank" class="btn btn-round btn-success">Ver demo</a>
+<hr/> 
 
 # ¿Qué son las peticiones en paralelo?
 
