--- a/_posts/ionic2/2017-12-06-fork-join.md
+++ b/_posts/ionic2/2017-12-06-fork-join.md
@@ -1,13 +1,14 @@
 ---
 layout: post
 title: "Peticiones en paralelo con RXJS (ForkJoin)"
-date: 2017-06-15
+date: 2017-12-06
 tags: [angular2, tips]
 categories: tips
 author: nicobytes
 repo: https://github.com/ion-book/demo114
 laucher: 'https://ion-book.github.io/demo114/'
 remember: true
+editname: "ionic2/2017-12-06-fork-join.md"
 cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Ffork-join%2Fcover.jpg?alt=media&token=03ddf6a8-0271-4b5f-a77b-48b9eb159294"
 versions:
   - title: 'ionic'
