:bug: fix error

--- a/_drafts/2016-08-09-fork-join.md
+++ b/_drafts/2016-08-09-fork-join.md
@@ -133,8 +133,7 @@ Abajo encontrarán el código completo para cada caso:
 ```ts
 
 import { Injectable } from '@angular/core';
-import { Http } from '@angular/http';
-import 'rxjs/add/operator/map';
+import { HttpClient } from '@angular/common/http';
 import 'rxjs/add/operator/toPromise';
 
 @Injectable()
@@ -147,13 +146,11 @@ export class TestProvider {
 
   getEvents(){
     return this.http.get('data/events.json')
-    .map(res => res.json())
     .toPromise();
   }
 
   getSpeakers(){
     return this.http.get('data/speakers.json')
-    .map(res => res.json())
     .toPromise();
   }
 
@@ -200,7 +197,7 @@ La función **ForJoin** sirve tanto para ejecutar varias promesas al mismo tiemp
 
 ```ts
 import { Injectable } from '@angular/core';
-import { Http } from '@angular/http';
+import { HttpClient } from '@angular/common/http';
 import { Observable } from 'rxjs/Observable';
 import 'rxjs/add/observable/forkJoin';
 import 'rxjs/add/operator/map';
@@ -211,16 +208,14 @@ export class TestProvider {
   events: any[] = [];
   speakers:  any[] = [];
 
-  constructor(private http: Http) {}
+  constructor(private http: HttpClient) {}
 
   getEvents(){
-    return this.http.get('assets/data/events.json')
-    .map(res => res.json())
+    return this.http.get('assets/data/events.json');
   }
 
   getSpeakers(){
-    return this.http.get('assets/data/speakers.json')
-    .map(res => res.json())
+    return this.http.get('assets/data/speakers.json');
   }
 
   getEventsWithSpeaker(){
@@ -247,7 +242,7 @@ export class TestProvider {
     }).reduce((a,b) =>{
       return a.concat(b);
     }, []);
-    
+
   }
 
 }
