Nuevo Post! Clase 3

--- a/_posts/angular/2017-11-14-clase-1-feed.md
+++ b/_posts/angular/2017-11-14-clase-1-feed.md
@@ -36,11 +36,11 @@ Adicionalmente, el equipo de Angular se ha planteado una agenda de 6 meses para 
 
 Ok. Habiendo dicho esto vamos a enfocar esta serie en Angular.
 
-## Instalando Ionic
+## Instalando Angular
 
 ### Instalando Node y Cordova
 
-El CLI de Ionic esta instalado sobre Node e Ionic es construido sobre Cordova, Asi que vas a necesitar [ Descargar e instalar una versión reciente de Node desde acá ](https://nodejs.org/).
+El CLI de Angular esta construido sobre Node, Asi que vas a necesitar [ Descargar e instalar una versión reciente de Node desde acá ](https://nodejs.org/).
 
 Una vez tienes Node.js instalado, tu podrás ser capaz de acceder al administrador de paquetes de node o npm a traves del comando.
 
