--- a/_posts/angular/2018-01-08-clase-3-feed.md
+++ b/_posts/angular/2018-01-08-clase-3-feed.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Clase 2 - Fundamentos de Angular"
+title: "Clase 3 - Autenticación de Usuarios"
 date: 2018-01-15
 tags: [angular, es6, typescript]
 categories: angular
