--- a/_posts/angular/2017-11-14-clase-1-feed.md
+++ b/_posts/angular/2017-11-14-clase-1-feed.md
@@ -116,7 +116,7 @@ vas a ver algo como esto en tu navegador:
 
 Si ves algo asi en tu pantalla estas muy bien :)
 
-{% include blog/subscribe.html %}
+{% include blog/adAngular.html %}
 
 !Perfecto! ahora, nosotros estamos casi listo.
 
