--- a/_posts/angular/2018-01-08-clase-3-feed.md
+++ b/_posts/angular/2018-01-08-clase-3-feed.md
@@ -111,7 +111,7 @@ import { AngularFireAuthModule } from 'angularfire2/auth';
 
 Ok, hasta aqui deberiamos tener todo conectado.
 
-{% include blog/subscribe.html %}
+{% include blog/adAngular.html %}
 
 ## Creando componentes a utilizar.
 
