WIP: Hecho en Ionic Las mas leidas

--- a/_posts/hechoen/2018-02-09-UDACITY.md.md
+++ b/_posts/hechoen/2018-02-09-UDACITY.md.md
@@ -5,11 +5,11 @@ date: 2018-02-09
 categories: hechoen
 tags: [build]
 author: carlosrojas
-cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-02-09-UDACITY.md%2FCaptura%20de%20pantalla%202018-02-06%20a%20la(s)%209.42.18%20p.%20m..png?alt=media&token=f8f0eac1-14d7-4775-b2cd-c0aab5969651"
+cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-02-09-UDACITY.md%2Fudacity.png?alt=media&token=d1fa250e-ed6f-4b5b-80e1-74177556476f"
 ---
 > En esta oportunidad traemos a [Udacity](https://in.udacity.com/) una plataforma de aprendizaje donde aprendes directamente de las empresas que crean las tecnologias.
 
-<amp-img width="1024" height="376" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-02-09-UDACITY.md%2FCaptura%20de%20pantalla%202018-02-08%20a%20la(s)%209.07.11%20p.%20m..png?alt=media&token=8b5e1ee4-7e18-4938-aeda-d36b8188cc11"></amp-img>
+<amp-img width="1024" height="376" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-02-09-UDACITY.md%2Fudacity.png?alt=media&token=d1fa250e-ed6f-4b5b-80e1-74177556476f"></amp-img>
 
 
 ## Que es Udacity ?
