--- a/_posts/news/2018-03-25-angular_v_6.md
+++ b/_posts/news/2018-03-25-angular_v_6.md
@@ -3,7 +3,7 @@ layout: post
 title: "Angular 6."
 date: 2018-03-26
 tags: [angular]
-categories: new
+categories: news
 author: carlosrojas
 cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-03-25-angular_v_6%2FAngular6.png?alt=media&token=23e75b8c-3e3e-4db9-bd78-45468c823d71"
 ---
