Nuevos Post! + adding subscribe links

--- a/_posts/news/2018-03-25-angular_v_6.md
+++ b/_posts/news/2018-03-25-angular_v_6.md
@@ -17,6 +17,8 @@ cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.co
 
 Si. El equipo de Angular hace un tiempo anuncio su plan predictible de lanzamiento de versiones como una forma de ayudar a los equipos grandes y sus empresas con la planeación de actualizaciones y cambios. Puedes ver las notas [aquí](https://github.com/angular/angular/blob/master/docs/RELEASE_SCHEDULE.md).
 
+{% include blog/adAngular.html %}
+
 ## Voy a tener que aprender Angular de nuevo ?
 
 No. Si has estado trabajando con Angular frecuentemente has notado que las versiones 2, 4 y 5 son muy parecidas entre ellas a excepción de pequeños cambios que puedes hacer en el momento que necesites. Puedes ayudarte con este pequeño [Asistente](https://angular-update-guide.firebaseapp.com/).
