--- a/_posts/news/2018-04-02-pwaios.md
+++ b/_posts/news/2018-04-02-pwaios.md
@@ -64,6 +64,8 @@ Bueno diria que todo. Pero seria un poco pesimista :p digamos que casi el 98% de
 
 - Web App Banner para invitar a tus usuarios.
 
+{% include blog/subscribe.html %}
+
 ## Como preparo mi App para ser PWA ?.
 
 Si trabajas con Angular o Ionic, es relativamente sencillo comenzar con las PWAs. Aca te dejo dos articulos por donde podrias comenzar.
