--- a/_posts/angular/2018-04-16-ngxs.md
+++ b/_posts/angular/2018-04-16-ngxs.md
@@ -5,15 +5,15 @@ date: 2018-04-16
 tags: [angular, architecture]
 categories: angular
 author: carlosrojas
-cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-01-02-angular-redux%2FRedux.png?alt=media&token=11a355d5-5b8c-496c-ac5a-4f41e5c4b6d8"
-editname: "angular/2018-01-02-angular-redux.md"
+cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-04-16-ngxs%2Fngxs.png?alt=media&token=e3d9b11a-3eda-4262-93e1-4fb3001b80c5"
+editname: "angular/2018-04-16-ngxs.md"
 versions:
   - title: 'ngxs/store'
     number: '2.0.0'
 ---
-> A medida que tu aplicacion va creciendo y vas creando más y más componentes cada vez es mas dificil saber quien cambia el estado de los datos. Es por esto que se habla del patron de Administración de estado *Redux*.
+> A medida que tu aplicacion va creciendo y vas creando más y más componentes cada vez es mas dificil saber quien cambia el estado de los datos. NGXS es una nueva libreria que te permite manejar un estado global de todos tus componentes.
 
-<amp-img width="1024" height="512" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-01-02-angular-redux%2FRedux.png?alt=media&token=11a355d5-5b8c-496c-ac5a-4f41e5c4b6d8"></amp-img> 
+<amp-img width="1024" height="512" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-04-16-ngxs%2Fngxs.png?alt=media&token=e3d9b11a-3eda-4262-93e1-4fb3001b80c5"></amp-img> 
 
 {% include general/net-promoter-score.html %} 
 
@@ -34,7 +34,6 @@ Es una libreria para State Management construida pensada en como funciona Angula
 
 ### Los cuatro principios de NGXS.
 
-
 *STORE* 
 
 Un contenedor global de estados, despachador de acciones y selector.
@@ -52,6 +51,8 @@ Definición de clase del estado.
 Los selectores para dividir los estados.
 
 <amp-img width="1024" height="512" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-04-16-ngxs%2Fngxsflow.png?alt=media&token=49c87ab5-067a-4b11-b784-8e29c465e6eb"></amp-img>
+
+{% include blog/subscribe.html %}
 
 ### Usando el Store
 
@@ -135,3 +136,29 @@ export class ZooComponent {
   @Select(state => state.animals) animals$: Observable<string[]>;
 }
 ```
+
+## ¿ Como empezar ?
+
+Instala la libreria en tu proyecto.
+
+```
+npm i @ngxs/store --S
+```
+
+y agrega el modulo en `app.module.ts`.
+
+````
+import { NgModule } from '@angular/core';
+import { NgxsModule } from '@ngxs/store';
+
+@NgModule({
+  imports: [
+    NgxsModule.forRoot([
+      ZooState
+    ])
+  ]
+})
+export class AppModule {}
+````
+
+Espero este Post sea de utilidad :)
