--- a/_posts/news/2018-05-04-angular_v_6.md
+++ b/_posts/news/2018-05-04-angular_v_6.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Angular 6."
-date: 2018-03-26
+date: 2018-05-04
 tags: [angular]
 categories: news
 author: carlosrojas
@@ -27,7 +27,11 @@ No. Si has estado trabajando con Angular frecuentemente has notado que las versi
 
 El equipo de Angular tiene ciertas versiones las cuales cuentan con LTS (Long Term Support) el cual puedes encontrar [acá](https://github.com/angular/angular/blob/master/docs/RELEASE_SCHEDULE.md#long-term-supported-lts-versions) y la versión 6 resulta ser una versión LTS.
 
+*Update* Todas las versiones mayores tienen LTS :)
+
 ## Novedades en la versión 6.
+
+En esta versión se estan sincronizando las versiones mayores de todos los paquetes que hacen parte de la plataforma. (`@angular/core`,   `@angular/common`, `@angular/compiler`, etc), el Angular CLI, Angular Material + CDK. Todo esta saliendo con la versión 6.
 
 La versión 6 de Angular tiene pequeños parches y 3 caracteristicas principales, estas son:
 
@@ -61,6 +65,12 @@ Puedes ver estas practicas [acá](https://docs.google.com/document/d/1CZC2rcpxff
 
 Y por ultimo la caracteristica que más me emociona  es la versión minima de Angular Elements. Para entender esto debes pensar en cuando desarrollas tus Apps lo que haces es basicamente crear Componentes de Angular, los cuales magicamente se renderizan y funcionan en el navegador. El problema con esto es que es magia solo en el universo de Angular, entonces, si lo quieres mezclar con otras tecnologias no es posible.
 
-Ahora con Angular Elements, Angular buscara convertir los componentes que quieras en componentes nativos para el Navegador o mas especificamente [Custom Elements](https://developer.mozilla.org/en-US/docs/Web/Web_Components/Using_custom_elements) y de esta manera van a ser piezas independientes que puedas utilizar con otras tecnologias.
+Ahora con Angular Elements, Angular buscara convertir los componentes que quieras en componentes nativos para el Navegador o mas especificamente [Custom Elements](https://developer.mozilla.org/en-US/docs/Web/Web_Components/Using_custom_elements) y de esta manera van a ser piezas independientes que puedas utilizar con otras tecnologias. Puedes explorar más sobre Angular Elements [Aquí](https://angular.io/guide/elements)
+
+## Mejoras de rendimiento para las animaciones.
+
+El paquete de Animations no necesita más el polyfill de Animation como dependencia. Es decir te puedes ahorrar 47KB de tu bundle mientras incrementas el rendimiento en las animaciones en Safari al mismo tiempo.
+
+
 
 Bueno espero que sea de ayuda y no te olvides comentar y compartir :)
