--- a/_posts/news/2019-07-28-ionic-4-beta.md
+++ b/_posts/news/2019-07-28-ionic-4-beta.md
@@ -20,19 +20,21 @@ cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.co
 
 ## Web Components con Stencil
 
-El equipo de Ionic en esta nueva versión y en las futuras versiones utilizará Web components en todos su SDK, con la intención de usar los estándares de la Web, esto hará que el núcleo de Ionic no dependa de ningún framework y además tenga un mejor performance.
+El equipo de Ionic en esta nueva versión y en las futuras versiones utilizará Web components en todo su SDK, con la intención de usar los estándares de la Web, esto hará que el núcleo de Ionic no dependa de ningún framework y además tenga un mejor rendimiento.
 
-Desde sus inicios Ionic ha escogido a Angular para construir todo su SDK aprovechando la gran API que ofrece, sin embargo los tiempos han cambiando y hay numerosos frameworks como Vue, Ember o React que también ofrecen un gran API. Pero el equipo de Ionic nunca mostró intención de crear un SDK para cada framework en particular, de tomar este camino sería difícil de mantener y estarían aumentando lo que se conoce como [Framework Churn](https://blog.ionicframework.com/the-end-of-framework-churn/){:target="_blank"}.
+Desde sus inicios Ionic ha escogido a Angular para construir todo su SDK, aprovechando la gran API que ofrece, sin embargo los tiempos han cambiando y hay numerosos frameworks como lo son Vue, Ember o React que ofrecen un gran API. Pero el equipo de Ionic nunca mostró intención de crear un SDK para cada framework en particular, de tomar este camino sería difícil de mantener y estarían aumentando lo que se conoce como el [Framework Churn](https://blog.ionicframework.com/the-end-of-framework-churn/){:target="_blank"}.
 
-Sin embargo el equipo de Ionic ha trabajado recientemente en [Stencil](https://blog.ng-classroom.com/blog/news/stencil-conf/){:target="_blank"} un compilador de componentes, con lo cual han reconstruido todo el núcleo de Ionic con Stencil, permitiendo tener un SDK compatible con cualquier framework. Los componentes creados con Stencil siguen los estándares de la Web, obteniendo un mejor rendimiento y logrando no depender de ningún Framework, como consecuencia todo el SDK de Ionic 4 puede ser integrado en cualquier framework ya sea Angular, Vue, Ember o React.
+Sin embargo el equipo de Ionic ha trabajado recientemente en [Stencil](https://blog.ng-classroom.com/blog/news/stencil-conf/){:target="_blank"}, un compilador de componentes con el cual han reconstruido todo el núcleo de Ionic con Stencil, permitiendo tener un SDK compatible con cualquier framework.
+
+Los componentes creados con Stencil siguen los estándares de la Web, obteniendo un mejor rendimiento y logrando trabajar sin dependencias, como consecuencia todo el SDK de Ionic 4 puede ser integrado en cualquier framework ya sea Angular, Vue, Ember o React.
 
 {% include blog/subscribe.html %}
 
 ## Agnóstico a frameworks
 
-Ionic siempre ha tenido el objetivo de crear un SDK que trabaje con cualquier tecnología que un programador web elija, en sus inicios Ionic 1 en 2013 escogió a Angular por su popularidad y por su gran API, sin embargo en la actualidad existen más frameworks con gran popularidad y poderosas comunidades.
+Ionic siempre ha tenido el objetivo de crear un SDK que trabaje con cualquier tecnología que un programador web elija, en sus inicios Ionic 1 en 2013 escogió a Angular por su popularidad y por su gran API, sin embargo en la actualidad existen numerosos frameworks con gran popularidad y con poderosas comunidades.
 
-Pero ahora con su nuevo SDK cualquier framework lo puede integrar gracias a Web Components que siguen el estándar y son interpretados directamente por el navegador y se usan como cualquier tag de HTML, es más puedes construir aplicaciones sin frameworks con VanillaJS, un ejemplo:
+Pero ahora con su nuevo SDK cualquier framework puede integrar Ionic gracias a los Web Components que siguen el estándar y son interpretados directamente por el navegador y se usan como cualquier tag de HTML, es más puedes construir aplicaciones sin frameworks con VanillaJS, un ejemplo:
 
 
 <amp-img width="725" height="540" layout="responsive" src="https://pbs.twimg.com/media/DJyxIHQVoAAfeBm.jpg"></amp-img>
@@ -48,25 +50,29 @@ Esto hará que la la comunidad de Ionic crezca sin importar qué framework se el
 
 ## Integración con Angular CLI & Angular Router
 
-Ya hemos hablado de que Ionic ahora usa Web Components en su núcleo y que es agnóstico, pero qué significa esto y ¿Como trabaja con Angular?
+Ya hemos hablado de que Ionic ahora usa Web Components en su núcleo y que es agnóstico, pero qué significa esto y ¿Cómo trabaja con Angular?
 
-Si ya haz trabajo con Ionic sabes que Ionic CLI y Angular CLI son diferentes y esto generaba confusión, además que se puede integrar las últimas novedades de Angular CLI y Angular a Ionic de manera inmediata. Ahora si quieres trabajar con Ionic puedes trabajar con las herramientas nativas de Angular y su comunidad como, schematics, Angular CLI y todas sus librerías. Ionic se vuelve un librería más dentro de un proyecto de Angular.
+Un problema es que Ionic CLI y Angular CLI son diferentes y esto genera confusión, además que usando Ionic CLI no se puede integrar las últimas novedades de Angular CLI y de Angular a Ionic de manera inmediata.
 
-Otro cambio importante es el uso nativo de Angular Router, es decir dejamos de usar NavController y usamos el flujo nativo de rutas de Angular.
+Ahora con Ionic 4, si quieres trabajar con Ionic puedes trabajar con las herramientas nativas de Angular y su comunidad como, schematics, Angular CLI y todas sus librerías. Ionic se vuelve un librería más dentro de un proyecto de Angular.
+
+Otro cambio importante es el uso nativo de Angular Router, es decir ahora dejamos de usar *NavController* y usamos el flujo nativo de rutas de Angular.
 
 ## ¿Cómo migrar a Ionic 4?
 
-No teman! la migración de Ionic 3 hacia Ionic 4 no es tan dramática como la que tuvimos de Ionic 1 a Ionic 2, es más, te sorprenderás que es mucho más fácil migrar de lo que crees.
+!No teman! la migración de Ionic 3 hacia Ionic 4 no es tan dramática como la que tuvimos de Ionic 1 a Ionic 2, es más, te sorprenderás que es mucho más fácil migrar de lo que crees.
 
-Lo más complejo será migrar de NavController a Angular Router, pero si ya haz trabajo con Angular y hecho otras aplicaciones usando Angular Router te será muy fácil hacer esta migración. Oficialmente hay una guía en la pagina oficial de Ionic para esta [migración](https://beta.ionicframework.com/docs/building/migration/){:target="_blank"}.
+Lo más complejo será migrar de NavController a Angular Router, pero si ya haz trabajo con Angular y hecho otras aplicaciones usando Angular Router te será muy fácil hacer esta migración.
 
-Ionic 4 si trae  varios [Breaking Changes](https://github.com/ionic-team/ionic/blob/master/angular/BREAKING.md){:target="_blank"} donde cambia algunas cosas a favor de usar Web Components. 
+Oficialmente hay una guía en la página oficial de Ionic para esta [migración](https://beta.ionicframework.com/docs/building/migration/){:target="_blank"}.
+
+Ionic 4 trae varios [Breaking Changes](https://github.com/ionic-team/ionic/blob/master/angular/BREAKING.md){:target="_blank"} donde cambia algunas cosas a favor de usar Web Components. 
 
 Sin embargo haremos una artículo de este tema en especial.
 
 ## ¿Algo más?
 
-Ionic ha trabajo no solo en crear un SDK agnóstico y potente, en paralelo ha trabajo en otros proyectos que se pueden integrar a las aplicaciones, como:
+Ionic ha trabajo no solo en crear un SDK agnóstico y potente, en paralelo ha trabajado en otros proyectos que se pueden integrar a las aplicaciones, como:
 
 - [Capacitor](https://capacitor.ionicframework.com/){:target="_blank"}: Un Bridge nativo para aplicaciones web.
 - [Ionicons](https://ionicons.com/){:target="_blank"}: Iconos en SVG y Web components.
@@ -76,7 +82,7 @@ Ionic ha trabajo no solo en crear un SDK agnóstico y potente, en paralelo ha tr
 
 ## ¿Ya lo puedo usar?
 
-Esta versión está en fase Beta así que no es recomendable usarlo en aplicaciones en producción, luego de la fase Beta sigue una fase de RC (release candidate) y finalmente lo lanzaran a producción. La recomendación es que desde ahora lo vayas probando, pero aun no en producción.
+Esta versión está en fase *Beta*, así que no es recomendable usarlo en aplicaciones en producción, luego de la fase Beta sigue una fase de RC (release candidate) y finalmente lo lanzarán a producción. La recomendación es que desde ahora lo vayas probando, pero aun no en producción.
 
-En conclusión, de ahora en adelante tendremos aplicaciones con mejor performance y mejor integración con Angular o con el framework de tu preferencia.
+En conclusión, de ahora en adelante tendremos aplicaciones con mejor rendimiento y mejor integración con Angular o con el framework de tu preferencia.
 
