--- a/_posts/tips/2018-09-05-redux.md
+++ b/_posts/tips/2018-09-05-redux.md
@@ -8,7 +8,7 @@ author: nicobytes
 video: true
 cover: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-09-05-redux%2Fcover.jpg?alt=media&token=36064ca0-0302-4afb-8381-c31e48ff00f2"
 ---
-> Redux es una arquitectura de datos muy popular en los últimos años, gracias a su patrón podemos manipular flujos de datos complejos y controlar el estado de una aplicación en JavaScript de forma eficiente y escalable. 
+> Redux es un contenedor del estado para aplicaciones en JS, muy popular en los últimos años, gracias a su patrón podemos manipular flujos de datos complejos y controlar el estado de una aplicación en JavaScript de forma eficiente y escalable. 
 
 <amp-img width="1280" height="720" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/posts%2F2018-09-05-redux%2Fcover.jpg?alt=media&token=36064ca0-0302-4afb-8381-c31e48ff00f2"></amp-img> 
 
