--- a/_posts/ionic2/2018-09-17-ngx-model.md
+++ b/_posts/ionic2/2018-09-17-ngx-model.md
@@ -22,11 +22,11 @@ versions:
 
 Gestionar el estado de una aplicación frontend es una de las tareas más importantes y delicadas. Una buena gestión de este es fundamental para tener una aplicación limpia, escalable y que no nos de muchos quebraderos de cabeza cuando queramos implementar nuevas funcionalidades. Para esta gestión existen cada vez más librerias que nos permiten usar la potencia de los Observables y de los Subject.
 
-En este artículo vamos a ver como realizar y gestionar el estado de una aplicación pequeña implementando el patrón que nos propone la librería ngx-model. La aplicación dispone de varias pantallas. En primer luegar tendremos una lista de conferencias desde la que podremos acceder al detalle de la conferencia donde, a parte de los datos de esta, tendremos un listado de speaker, en el que podremos añadir nuevos, editar los existentes o eliminarlos.
+En este artículo vamos a ver como realizar y gestionar el estado de una aplicación pequeña implementando el patrón que nos propone la librería ngx-model. La aplicación dispone de varias pantallas. En primer lugar tendremos una lista de conferencias desde la que podremos acceder al detalle de la conferencia donde, a parte de los datos de esta, tendremos un listado de speakers, en el que podremos añadir nuevos, editar los existentes o eliminarlos.
 
 ### 1. Que es ngx-model
 
-[ngx-model](https://github.com/tomastrajan/ngx-model) es una librería para hacer un manejo simple del estado de nuestra aplicación. Para ellos nos propone una API mínima, un solo flujo de datos, soporte para multiples modelos y expone los datos con RxJS Observables.
+[ngx-model](https://github.com/tomastrajan/ngx-model) es una librería para hacer un manejo simple del estado de nuestra aplicación. Para ello nos propone una API mínima, un solo flujo de datos, soporte para multiples modelos y expone los datos con RxJS Observables.
 
 En definitiva, crearemos un servicio o provider para cada uno de nuestros modelos de datos, en nuestra aplicación de ejemplo tendremos dos: conferences y speakers. Y todas las "acciones" que realicemos sobre estos dos modelos las haremos en estos servicios o providers. Tras cada acción se actualizará el estado de nuestros modelos, o mejor dicho el estado de nuestra aplicación.
 
@@ -66,7 +66,7 @@ o
 yard add ngx-model
 ```
 
-y lo importamos en nuestro /src/app/app.module.ts
+y lo importamos en nuestro `/src/app/app.module.ts`
 
 ```ts
 import { BrowserModule } from '@angular/platform-browser';
@@ -115,7 +115,7 @@ ionic g provider speakers
 
 ### 7. Cambiamos nuestra página de inicio
 
-Sustituimos la página Home que por defecto viene como página inicial por la nueva página que hemos creado, ConferenceListPage. Para ello hacemos unos cambios en /src/app/app.component.ts
+Sustituimos la página Home que por defecto viene como página inicial por la nueva página que hemos creado, ConferenceListPage. Para ello hacemos unos cambios en `/src/app/app.component.ts`
 
 ```ts
 import { Component } from '@angular/core';
@@ -140,9 +140,9 @@ export class MyApp {
 }
 ```
 
-Recordar que ya no es necesario importar las página ConferenceListPage ya que estamos usando lazy load.
+Recordar que ya no es necesario importar las página ConferenceListPage ya que estamos usando lazy loading.
 
-Y eliminamos la importación de HomePage que nos crea automaticamente Ionic CLI al generar el proyecto en el fichero /src/app/app.module.ts
+Y eliminamos la importación de HomePage que nos crea automaticamente Ionic CLI al generar el proyecto en el fichero `/src/app/app.module.ts`
 
 ```ts
 import { BrowserModule } from '@angular/platform-browser';
@@ -186,9 +186,9 @@ export class AppModule {}
 
 ### 8. Creamos las interfaces para nuestros datos
 
-Vamos a crear dos interfaces sencillas para el model Conference y el modelo Speaker. Para esto creamos la carpeta /src/interfaces.
+Vamos a crear dos interfaces sencillas para el modelo Conference y el modelo Speaker. Para esto creamos la carpeta `/src/interfaces`.
 
-/src/interfaces/conference.interface.ts
+`/src/interfaces/conference.interface.ts`
 
 ```ts
 export interface Conference {
@@ -198,7 +198,7 @@ export interface Conference {
 }
 ```
 
-/src/interfaces/speaker.interface.ts
+`/src/interfaces/speaker.interface.ts`
 
 ```ts
 export interface Speaker {
@@ -209,11 +209,11 @@ export interface Speaker {
 }
 ```
 
-Nota: El atributo avatar lo vamos a poner como opcional ya que vamos a dejar que uestra api de prueba nos lo añada solo.
+Nota: El atributo avatar lo vamos a poner como opcional ya que vamos a dejar que nuestra API de prueba nos lo añada solo.
 
 ### 9. Configuramos los provider al estilo ngx-model
 
-El provider conferences solo va a obtener los datos de las conferencias de la API. Una vez obtenidos actualizará el estado del modelo para de esto modo actualizar el estado de nuestra app.
+El provider conferences solo va a obtener los datos de las conferencias de la API. Una vez obtenidos actualizará el estado del modelo para de este modo actualizar el estado de nuestra app.
 
 ```ts
 import { HttpClient } from '@angular/common/http';
@@ -332,7 +332,7 @@ export class SpeakersProvider {
 
 Ahora el estado de los speaker reside en el servicio cada vez que actualicemos ese estado o array de speaker todo los "observadores" de ese stream de datos, es decir, los componentes subscritos se actualizarán.
 
-Vamos a ver más en detalle el método createSpeaker.
+Vamos a ver más en detalle el método `createSpeaker`.
 
 ```ts
   createSpeaker(speaker: any) {
@@ -346,13 +346,13 @@ Vamos a ver más en detalle el método createSpeaker.
   }
 ``` 
 
-Aquí lo que hacemos es hacer una petición post a la API para añadir un nuevo speaker, una vez que la APi nos responde encadenamos la petición con el operador SwitchMap para realizar un getSpeaker y de sta manera actualizar el estado de nuestro modelo dando como consecuencia que los componentes subscritos se actualicen. Esta acción la prodriamos hacer de muchas maneras, en este caso, como la aplicación de ejemplo es sencilla la hemos realizado así para también mantener el estado de nuestra app sincronizado con el estado de la API.    
+Aquí lo que hacemos es hacer una petición post a la API para añadir un nuevo speaker, una vez que la API nos responde encadenamos la petición con el operador SwitchMap para realizar un `getSpeaker` y de esta manera actualizar el estado de nuestro modelo dando como consecuencia que los componentes subscritos se actualicen. Esta acción la prodriamos hacer de muchas maneras, en este caso, como la aplicación de ejemplo es sencilla la hemos realizado así para también mantener el estado de nuestra app sincronizada con el estado de la API.    
 
 ### 10. Visualización de datos en los componentes Pages
 
 La página del listado de conferencias se quedaría de esta manera.
 
-/src/pages/conference-list/conference-list.ts
+`/src/pages/conference-list/conference-list.ts`
 
 ```ts
 import { Component } from '@angular/core';
@@ -393,9 +393,10 @@ export class ConferenceListPage {
 }
 ```
 
-/src/pages/conference-list/conference-list.html
+`/src/pages/conference-list/conference-list.html`
 
 ```html
+{% raw %}
 <ion-header>
 
   <ion-navbar>
@@ -417,11 +418,12 @@ export class ConferenceListPage {
   </ion-list>
 
 </ion-content>
+{% endraw %}
 ```
 
-La página del detalle de una conferencia tiene algo más de código, pero espero que fácil de seguir.
+La página del detalle de una conferencia tiene algo más de código, pero espero que sea fácil de seguir.
 
-/src/pages/conference-detail/conference-detail.ts
+`/src/pages/conference-detail/conference-detail.ts`
 
 ```ts
 import { Component } from '@angular/core';
@@ -515,9 +517,10 @@ export class ConferenceDetailPage {
 }
 ```
 
-/src/pages/conference-detail/conference-detail.html
+`/src/pages/conference-detail/conference-detail.html`
 
 ```html
+{% raw %}
 <ion-header>
 
   <ion-navbar>
@@ -553,9 +556,10 @@ export class ConferenceDetailPage {
     <button ion-fab mini (tap)="createSpeaker()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
+{% endraw %}
 ```
 
-Quiero detener en la subscripción al modelo del provider Speakers
+Quiero detenerme en la subscripción al modelo del provider Speakers
 
 ```ts
 this.speakers$ = this.speakersProv.speakers$
@@ -566,13 +570,13 @@ this.speakers$ = this.speakersProv.speakers$
       );
 ```
 
-Como en definitiva el modelo del provider speakers (speaker$) es un observable podemos utilizar cualquiera de los operadores de estos. en este caso usamos el operador map para filtrar los resultados por el conferenceId de la conferencia que estamos visualizando, pero podriamos utilizar operadores más complejos. 
+Como en definitiva el modelo del provider speakers (speaker$) es un observable podemos utilizar cualquiera de los operadores de estos. En este caso usamos el operador `map` para filtrar los resultados por el conferenceId de la conferencia que estamos visualizando, pero podriamos utilizar operadores más complejos. 
 
 ### 11. Configuramos el modal SpeakerFormPage para añadir y editar a los speaker
 
-Para la actualización de los datos de nuestros speaker he decido hacer un pequeño formulario en un componente para usarlo tanto para la creación como para la actualización.
+Para la actualización de los datos de nuestros speakers he decido hacer un pequeño formulario en un componente para usarlo tanto para la creación como para la actualización.
 
-/src/pages/speaker-form/speaker-form.ts
+`/src/pages/speaker-form/speaker-form.ts`
 
 ```ts
 import { Component } from '@angular/core';
@@ -656,10 +660,6 @@ export class SpeakerFormPage {
 </ion-content>
 ```
 
-### 12. Demo
-
-video en youtube o gif animado
-
-### 13. Conclusiones
+### 12. Conclusiones
 
 Gestionar el estado de la aplicación en un solo sitio es algo que nos facilita la vida a los desarrolladores frontend. En el caso de ngx-model no tenemos una sola fuente de verdad como propone la arquitectura Redux, sino que gestionamos el estado de cada uno de nuestros modelos de datos de forma independiente pero se asemeja mucho a patrón propuesto por Redux. Lo bueno de está librería es que usa toda la potencia de los Observables y Subject al exponer los datos con lo que no tenemos que estar preocupandonos de actualizar los componentes subscritos a los distintos modelo cada vez que realizamos una acción sobre estos.
